[workspace]
resolver = "2"
members = [
    "blog_cfg",
    "blog_cli",
    "blog_cvt",
    "blog_env",
    "blog_err",
    "blog_grt",
    "blog_str",
]

[package]
name = "blog-builder"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "blog"

[[bin]]
path = "src/main.rs"
name = "blog"

[dependencies]

[dependencies.blog_cfg]
path = "./blog_cfg"

[dependencies.blog_cli]
path = "./blog_cli"

[dependencies.blog_cvt]
path = "./blog_cvt"

[dependencies.blog_env]
path = "./blog_env"

[dependencies.blog_err]
path = "./blog_err"

[dependencies.blog_str]
path = "./blog_str"
