[workspace]
resolver = "2"
members = [
    "blog_cfg",
    "blog_chk",
    "blog_cli",
    "blog_cvt",
    "blog_emt",
    "blog_env",
    "blog_err",
    "blog_grt",
    "blog_prs",
    "blog_str",
    "blog_tkn",
]

[package]
name = "blog-builder"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "blog"

[[bin]]
path = "src/main.rs"
name = "blog"

[dependencies]
colored = "2.1.0"

[dependencies.blog_cfg]
path = "./blog_cfg"

[dependencies.blog_chk]
path = "./blog_chk"

[dependencies.blog_cli]
path = "./blog_cli"

[dependencies.blog_cvt]
path = "./blog_cvt"

[dependencies.blog_emt]
path = "./blog_emt"

[dependencies.blog_env]
path = "./blog_env"

[dependencies.blog_err]
path = "./blog_err"

[dependencies.blog_prs]
path = "./blog_prs"

[dependencies.blog_str]
path = "./blog_str"
