[workspace]
resolver = "2"
members = [
    "blog_cfg",
    "blog_chk",
    "blog_cli",
    "blog_cvt",
    "blog_emt",
    "blog_env",
    "blog_err",
    "blog_grt",
    "blog_prs",
    "blog_str",
    "blog_sty",
    "blog_tkn",
]

[package]
name = "blog-builder"
description = "A simple, intuitive static web framework."
license = "MIT"
repository = "https://github.com/josephrhobbs/blog-builder.git"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "blog"

[[bin]]
path = "src/main.rs"
name = "blog"

[dependencies]
colored = "2.1.0"

[dependencies.blog_cfg]
path = "./blog_cfg"
version = "0.1.0"

[dependencies.blog_cli]
path = "./blog_cli"
version = "0.1.0"

[dependencies.blog_cvt]
path = "./blog_cvt"
version = "0.1.0"

[dependencies.blog_env]
path = "./blog_env"
version = "0.1.0"

[dependencies.blog_err]
path = "./blog_err"
version = "0.1.0"

[dependencies.blog_str]
path = "./blog_str"
version = "0.1.0"
