[package]
name = "blog_cvt"
version = "0.1.0"
edition = "2021"

[lib]
name = "blog_cvt"
path = "src/lib.rs"

[dependencies]
colored = "2.1.0"

[dependencies.blog_chk]
path = "../blog_chk"

[dependencies.blog_cfg]
path = "../blog_cfg"

[dependencies.blog_err]
path = "../blog_err"

[dependencies.blog_emt]
path = "../blog_emt"

[dependencies.blog_prs]
path = "../blog_prs"

[dependencies.blog_tkn]
path = "../blog_tkn"