[package]
name = "blog_emt"
version = "0.1.0"
edition = "2021"

[lib]
name = "blog_emt"
path = "src/lib.rs"

[dependencies]

[dependencies.blog_cfg]
path = "../blog_cfg"

[dependencies.blog_env]
path = "../blog_env"

[dependencies.blog_sty]
path = "../blog_sty"

[dependencies.blog_prs]
path = "../blog_prs"